--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "engines": {
-    "node": ">=20.19.0",
-    "npm": ">=10.0.0"
+    "node": "20.19.0"
   },
   "scripts": {
     "prebuild": "prisma generate",
