--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ['nodejs_20']
+nixPkgs = ['nodejs-20_x']
 
 [phases.install]
 cmds = ['npm ci']
@@ -11,4 +11,4 @@ cmds = [
 ]
 
 [start]
-cmd = 'npm run start:prod'
+cmd = 'node dist/main.js'
