--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "prisma:migrate": "prisma migrate deploy"
   },
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
+    "@google/generative-ai": "^0.24.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -35,10 +37,11 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.3",
     "@prisma/client": "^6.0.0",
+    "apify-client": "^2.21.0",
+    "cheerio": "^1.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "cookie-parser": "^1.4.7",
-    "nodemailer": "^7.0.11",
     "passport-jwt": "^4.0.1",
     "prisma": "^6.0.0",
     "reflect-metadata": "^0.2.2",
