--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cheerio": "^1.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "cloudinary": "^2.9.0",
     "cookie-parser": "^1.4.7",
     "passport-jwt": "^4.0.1",
     "prisma": "^6.0.0",
@@ -58,6 +59,7 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/nodemailer": "^7.0.4",
     "@types/supertest": "^6.0.2",
